tests/invalid/Final_Invalid_1.whiley
function f(final int x) -> (int r):
    //
    x = x + 1
    //
    return x
